# pdm-autoexport

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/pdm_autoexport/: __init__.py  hook.py
tests/: pyproject.toml  test_autoexport.py
