[project]
name = "pdm-autoexport"
description = "A PDM plugin to sync the exported files with the project file"
authors = [
    {name = "Frost Ming", email = "mianghong@gmail.com"},
]
dependencies = []
requires-python = ">=3.7"
keywords = ["pdm", "plugin"]
readme = "README.md"
license = {text = "MIT"}
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
Homepage = "https://github.com/frostming/pdm-autoexport"
Changelog = "https://github.com/frostming/pdm-autoexport/releases"

[project.entry-points.pdm]
autoexport = "pdm_autoexport:main"

[tool.pdm]
version = {source = "scm"}

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.1.2",
    "pdm>=1.0.0",
]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
