[project]
name = "pdm-autoexport"
description = "A PDM plugin to sync the exported files with the project file"
authors = [
    {name = "Frost Ming", email = "mianghong@gmail.com"},
]
dependencies = []
requires-python = ">=3.9"
keywords = ["pdm", "plugin"]
readme = "README.md"
license = {text = "MIT"}
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
Homepage = "https://github.com/frostming/pdm-autoexport"
Changelog = "https://github.com/frostming/pdm-autoexport/releases"

[project.entry-points.pdm]
autoexport = "pdm_autoexport:main"

[tool.pdm]
version = {source = "scm"}

[dependency-groups]
test = [
    "pytest>=7.1.2",
    "pdm>=1.0.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
