[project]
name = "test-pdm"
version = "0.1.0"
dependencies = ["requests"]
requires-python = ">=3.9"

[project.optional-dependencies]
socks = ["PySocks"]

[dependency-groups]
test = ["pytest"]

[[tool.pdm.autoexport]]
filename = "requirements.txt"

[[tool.pdm.autoexport]]
filename = "requirements-test.txt"
groups = ["test"]
without-hashes = true

[[tool.pdm.autoexport]]
filename = "requirements-pyproject.txt"
pyproject = true

